progressbar working but not full screen yet popover fix on tablet view and responsiveness of navbar

--- a/src/components/NavBarSoundCloud/navbarsoundcloud.css
+++ b/src/components/NavBarSoundCloud/navbarsoundcloud.css
@@ -1,7 +1,7 @@
 .navbar_soundcloud_player {
   width: 100%;
   height: 64px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   padding: 16px 28px;
 }
 .navlogo_wrapper {
@@ -88,10 +88,10 @@
   text-transform: capitalize;
   color: #0b0b0c;
 }
-.nav_col_3_adjustment{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+.nav_col_3_adjustment {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
 .navbar_action_icon_wrapper {
   width: 24px;
