--- a/src/components/SoundCloudVideoPlayer/soundcloudvideoplayer.css
+++ b/src/components/SoundCloudVideoPlayer/soundcloudvideoplayer.css
@@ -195,6 +195,7 @@
   border-radius: 30px;
   background: #ffffff;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.13);
+  cursor: pointer;
 }
 
 .plus_icons_wp {
@@ -208,6 +209,7 @@
   border-radius: 30px;
   background: #ffffff;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.13);
+  cursor: pointer;
 }
 
 .download_icons_wp {
@@ -221,6 +223,7 @@
   border-radius: 30px;
   background: #ffffff;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.13);
+  cursor: pointer;
 }
 
 .copy_icons_wp {
@@ -234,6 +237,7 @@
   border-radius: 30px;
   background: #ffffff;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.13);
+  cursor: pointer;
 }
 .react_player_controls_wrapper {
   min-width: calc(100% - 10px);
@@ -476,7 +480,7 @@
   color: #161618;
 }
 
-.link_copy_wrapper{
+.link_copy_wrapper {
   position: absolute;
   bottom: -2rem;
   left: 16rem;
@@ -492,16 +496,80 @@
   align-items: center;
 }
 
+.mbl_cards_box {
+  display: grid;
+  grid-template-columns: 150px;
+  width: fit-content;
+  margin: 2rem auto;
+}
+.mbl_cards_box img {
+  width: 100%;
+  object-fit: contain;
+  margin: 0 auto;
+  height: -webkit-fill-available;
+}
+.mbl_card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+  gap: 0.5rem;
+  margin: 1rem auto;
+}
+.card_title {
+  font-size: large;
+}
 
+.pl_icon_cards_right {
+  width: 20px;
+  height: 20px;
+  border-radius: 20px;
+  opacity: 0.5;
+  background-color: #161618;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 8rem;
+  left: 4rem;
+}
+.ac_icon_cards_right {
+  width: 24px;
+  height: 24px;
+  border-radius: 24px;
+  background-color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0.7rem;
+  right: 0.5rem;
+}
 
+.time_right_wrapper_cards {
+  min-width: 33px;
+  height: 19px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 44px;
+  right: 6px;
+  background-color: #161618;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
 
+.time_right_wrapper_cards_txt {
+  color: #ffffff;
+  font-size: 11px;
+  font-weight: 500;
+}
 
-
-
-
-
-
-
+.dis_none_mv_navbar {
+  display: none;
+}
 
 /* Ipad and Mobile views  */
 
@@ -520,7 +588,7 @@
   }
 }
 
-@media only screen and (min-width: 768px) and (max-width: 992px) {
+@media only screen and (min-width: 768px) and (max-width: 1026px) {
   .dis {
     display: block;
   }
@@ -580,6 +648,49 @@
   }
   .card_title {
     font-size: large;
+  }
+
+  .popoover_wrapper {
+    position: absolute;
+    right: 1rem;
+    top: 4rem;
+    width: 282px;
+    height: 438px;
+    border-radius: 8px;
+    background: #ffffff;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.15);
+    z-index: 10;
+    overflow-y: scroll;
+  }
+
+  .save_collection_btn_wrapper {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    position: sticky;
+    /* bottom: -1rem; */
+    /* right: 10px; */
+    cursor: pointer;
+    top: 24.5rem;
+    margin-bottom: 20px;
+  }
+
+  .confirmation_wrapper {
+    position: absolute;
+    bottom: -4rem;
+    left: 7rem;
+    width: 320px;
+    height: 68px;
+    background-color: #287d3c;
+    border-radius: 8px;
+    padding: 6px 16px 6px 16px;
+    z-index: 30;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -644,14 +755,52 @@
   .card_title {
     font-size: large;
   }
+
+  .popoover_wrapper {
+    position: absolute;
+    right: 1rem;
+    top: 4rem;
+    width: 282px;
+    height: 438px;
+    border-radius: 8px;
+    background: #ffffff;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.15);
+    z-index: 10;
+    overflow-y: scroll;
+  }
+
+  .save_collection_btn_wrapper {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    position: sticky;
+    /* bottom: -1rem; */
+    /* right: 10px; */
+    cursor: pointer;
+    top: 24.5rem;
+    margin-bottom: 20px;
+  }
 }
 
 @media only screen and (max-width: 600px) {
+  .dis_nav_bar {
+    display: none;
+  }
   .dis {
+    display: block;
+  }
+  .dis_none_mv_navbar {
     display: block;
   }
   .dis_icon_mv {
     display: none;
+  }
+  .mv_navbar_row_wrapper {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
   .mv_sc_container {
     display: flex;
@@ -757,5 +906,34 @@
   }
   .card_title {
     font-size: large;
+  }
+
+  .popoover_wrapper {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    background: #ffffff;
+    box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.15);
+    z-index: 10;
+    overflow-y: scroll;
+  }
+
+  .save_collection_btn_wrapper {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    height: 40px;
+    background-color: transparent;
+    position: sticky;
+    /* bottom: -1rem; */
+    /* right: 10px; */
+    cursor: pointer;
+    top: 24.5rem;
+    margin-bottom: 20px;
   }
 }
